ProTrackDev/force-app/main/default/objects/TR_Sprint__c/TR_Sprint__c.object-meta.xml
<CustomObject>
    <label>Sprint</label>
    <nameField>
        <label>Sprint Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>