ProTrackDev/force-app/main/default/objects/TR_Sprint__c/fields/TR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TR_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>