ProTrackDev/force-app/main/default/objects/TR_Sprint__c/fields/TR_Objective__c.field-meta.xml
<CustomField>
    <fullName>TR_Objective__c</fullName>
    <label>Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>