ProTrackDev/force-app/main/default/objects/TR_Sprint__c/fields/TR_Release__c.field-meta.xml
<CustomField>
    <fullName>TR_Release__c</fullName>
    <description>Release that is related to the sprint</description>
    <label>Release</label>
    <referenceTo>TR_Release__c</referenceTo>
    <relationshipLabel>Sprints</relationshipLabel>
    <relationshipName>Sprints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>