ProTrackDev/force-app/main/default/objects/TR_Sprint__c/fields/TR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TR_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>