ProTrackDev/force-app/main/default/objects/TR_Sprint__c/fields/TR_Total_Capacity_MD__c.field-meta.xml
<CustomField>
    <fullName>TR_Total_Capacity_MD__c</fullName>
    <description>Total Capacity (defined in Man Days)</description>
    <label>Total Capacity (MD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>