ProTrackDev/force-app/main/default/objects/TR_Sprint__c/fields/TR_Total_Capacity_US_Points__c.field-meta.xml
<CustomField>
    <fullName>TR_Total_Capacity_US_Points__c</fullName>
    <description>Total Capacity for this sprint (in US points)</description>
    <label>Total Capacity (US Points)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>