ProTrackDev/force-app/main/default/objects/TR_Sprint__c/fields/TR_Total_Working_Days_in_Sprint__c.field-meta.xml
<CustomField>
    <fullName>TR_Total_Working_Days_in_Sprint__c</fullName>
    <formula>IF(AND((5 - (CASE(MOD( TR_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD( TR_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
((( TR_End_Date__c - TR_Start_Date__c ) + 1) &lt; 7)), 
((CASE(MOD( TR_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD( TR_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))), 
(((FLOOR((( TR_End_Date__c - TR_Start_Date__c ) - (CASE(MOD( TR_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) + 
(CASE(MOD( TR_Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD( TR_End_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Working Days in Sprint</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>