ProTrackDev/force-app/main/default/objects/TR_Sprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TR_Start_Date__c</columns>
    <columns>TR_End_Date__c</columns>
    <columns>TR_Status__c</columns>
    <columns>TR_Release__c</columns>
    <columns>TR_Total_Working_Days_in_Sprint__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>